--- a/cog.yaml
+++ b/cog.yaml
@@ -3,18 +3,20 @@ build:
   cuda: "11.6"
   python_version: "3.10"
   python_packages:
-    - "diffusers==0.15.1"
-    - "torch==1.13.1"
+    - "diffusers==0.16.1"
+    - "torch==2.0.0"
     - "ftfy==6.1.1"
     - "scipy==1.9.3"
     - "transformers==4.27.1"
     - "accelerate==0.17.1"
-    - "xformers==0.0.16"
+    - "xformers==0.0.19"
     - "runpod==0.9.0"
+    - "imageio==2.28.1"
 
   run:
     - pip install triton
     - pip install compel
+    - pip install imageio[ffmpeg]
   #   - pip install https://github.com/runpod/runpod-python/archive/main.zip
 
 predict: "predict.py:Predictor"
