--- a/cog.yaml
+++ b/cog.yaml
@@ -3,18 +3,15 @@ build:
   cuda: "11.6"
   python_version: "3.10"
   python_packages:
-    - "diffusers==0.16.1"
-    - "torch==1.13.1"
-    - "ftfy==6.1.1"
-    - "scipy==1.9.3"
-    - "transformers==4.29.2"
-    - "accelerate==0.17.1"
-    - "xformers==0.0.16"
+    - "diffusers==0.18.2"
+    - "torch==2.0.1"
+    - "ftfy"
+    - "scipy"
+    - "transformers>=4.25.1"
+    - "accelerate>=0.11.0"
     - "runpod==0.9.0"
-
-  run:
-    - pip install triton
-    - pip install compel
-  #   - pip install https://github.com/runpod/runpod-python/archive/main.zip
+    - "compel==2.0.1"
+    - "triton"
+    - "safetensors>=0.3.1"
 
 predict: "predict.py:Predictor"
